[gd_scene load_steps=2 format=3 uid="uid://diyllhpojcyld"]

[ext_resource type="Script" path="res://Scene/UI.gd" id="1_oms5o"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_oms5o")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
offset_right = 150.0
offset_bottom = 27.0

[node name="OrganCount" type="Label" parent="HBoxContainer"]
offset_left = 154.0
offset_top = 7.0
offset_right = 271.0
offset_bottom = 33.0
text = "Organ Count: 0"

[node name="TryAgain" type="PanelContainer" parent="."]
visible = false
offset_left = 505.0
offset_top = 268.0
offset_right = 639.0
offset_bottom = 329.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="TryAgain"]
offset_right = 134.0
offset_bottom = 61.0

[node name="Label" type="Label" parent="TryAgain/VBoxContainer"]
offset_right = 134.0
offset_bottom = 26.0
text = "You were caught!"

[node name="RestartButton" type="Button" parent="TryAgain/VBoxContainer"]
offset_top = 30.0
offset_right = 134.0
offset_bottom = 61.0
text = "Try Again?"

[connection signal="pressed" from="TryAgain/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
